add correct twitter og image

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,7 +26,7 @@
     <meta property="twitter:title" content="DubJam | The Music Making Platform of the Future" />
     <meta property="twitter:description"
         content="DubJam is a real-time collaboration audio platform. It allows multiple users to create and collaborate on developing fun visualized beats." />
-    <meta property="twitter:image" content="/meta-image.png" />
+    <meta property="twitter:image" content="/meta.png" />
     <title>DubJam | The Music Making Platform of the Future</title>
 </head>
 
