--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,13 +16,13 @@
     <meta name="revisit-after" content="3 days">
     <meta name="author" content="Nyumat">
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://dubhacks-5yfj.onrender.com" />
+    <meta property="og:url" content="https://dubjam.onrender.com" />
     <meta property="og:title" content="DubJam | The Music Making Platform of the Future" />
     <meta property="og:description"
         content="DubJam is a real-time collaboration audio platform. It allows multiple users to create and collaborate on developing fun visualized beats." />
-    <meta property="og:image" content="/meta-image.png" />
+    <meta property="og:image" content="/meta.png" />
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://dubhacks-5yfj.onrender.com" />
+    <meta property="twitter:url" content="https://dubjam.onrender.com" />
     <meta property="twitter:title" content="DubJam | The Music Making Platform of the Future" />
     <meta property="twitter:description"
         content="DubJam is a real-time collaboration audio platform. It allows multiple users to create and collaborate on developing fun visualized beats." />
